# xora

./: .gitignore  README.md  pyproject.toml
examples/: full_profile.txt  password_list.txt  sample_profile.txt  test1.txt
xora/: __init__.py  cli.py  codegen.py  inference_engine.py  interactive.py  password_profiler.py  pattern_analyzer.py  profile_parser.py  semantic_analyzer.py
xora/llm/: __init__.py  anthropic_provider.py  base.py  ollama.py  registry.py
