[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xora"
version = "0.1.0"
description = "Targeted password wordlist generator for red team engagements"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]

[project.scripts]
xora = "xora.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["xora*"]
